alignment fixes

--- a/wp-content/themes/HighendWP-child/less/_contact.less
+++ b/wp-content/themes/HighendWP-child/less/_contact.less
@@ -185,6 +185,9 @@
 		}
 
 		margin-bottom: 50px !important;
+		margin-left: -15px;
+		margin-right: -15px;
+		padding: 40px 20px 0;
     }
 
 
@@ -426,6 +429,10 @@ input[type="checkbox"] {
 		width: 100%;
 		float: left;
 		margin: 0 0 15px 0 !important;
+	}
+
+	.vc_custom_1518429437561{
+		padding-top: 10px !important;
 	}
 }
 @media(min-width: 768px){
