--- a/wp-content/themes/HighendWP-child/less/_jobs.less
+++ b/wp-content/themes/HighendWP-child/less/_jobs.less
@@ -147,5 +147,8 @@
 			padding-left: 0 !important;
 			padding-right: 0 !important;
 		}
+		.vc_custom_1517571211850, .vc_custom_1519198258064{
+			text-align: center;
+		}
 	}
 }
